Refactor cyperproject.html to eliminate redundancy
Removed duplicate HTML structure and cleaned up the code.

--- a/cyperproject.html
+++ b/cyperproject.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<index.html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
@@ -122,3 +122,4 @@ strong {
 
 </body>
 </html>
+
