--- a/cyperproject2.html
+++ b/cyperproject2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<index.html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
@@ -113,3 +113,4 @@ ul {
 
 </body>
 </html>
+
