--- a/cyperproject2.html
+++ b/cyperproject2.html
@@ -1,4 +1,4 @@
-<index.html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
@@ -113,4 +113,5 @@ ul {
 
 </body>
 </html>
+
 
