--- a/cyperproject2.html
+++ b/cyperproject2.html
@@ -108,10 +108,11 @@ ul {
     <div class="tip">✔ حدث جهازك باستمرار.</div>
     <div class="tip">✔ لا تضغط أي رابط يصلك من شخص مجهول أو غير معتاد.</div>
 
-    <a href="cyperproject.html" class="back-btn">⬅ رجوع</a>
+    <a href="index.html" class="back-btn">⬅ رجوع</a>
 </div>
 
 </body>
 </html>
+
 
 
