Add English version of cybersecurity alert page

--- a/index.html
+++ b/index.html
@@ -1,76 +1,39 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>⚠️ تنبيه سيبراني</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>⚠️ Cybersecurity Alert</title>
 
 <style>
 body {
     background: #0d0f13;
     color: #fff;
-    font-family: "Tajawal", sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
-    padding: 40px;
+    padding: 20px;
+    margin: 0;
 }
 
 .container {
     background: #151820;
-    padding: 35px;
+    padding: 25px;
     border-radius: 20px;
-    max-width: 450px;
+    max-width: 500px;
     margin: auto;
     box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 28px;
     margin-bottom: 15px;
     color: #ff4444;
 }
 
 p {
     line-height: 1.7;
-    font-size: 18px;
-    margin-bottom: 25px;
-}
-
-strong {
-    color: #ffca28;
-}
-
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-<meta charset="UTF-8">
-<title>⚠️ تنبيه سيبراني</title>
-
-<style>
-body {
-    background: #0d0f13;
-    color: #fff;
-    font-family: "Tajawal", sans-serif;
-    text-align: center;
-    padding: 40px;
-}
-
-.container {
-    background: #151820;
-    padding: 35px;
-    border-radius: 20px;
-    max-width: 450px;
-    margin: auto;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
-}
-
-h1 {
-    font-size: 30px;
-    margin-bottom: 15px;
-    color: #ff4444;
-}
-
-p {
-    line-height: 1.7;
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 25px;
 }
 
@@ -80,7 +43,7 @@ strong {
 
 .btn {
     display: inline-block;
-    padding: 12px 18px;
+    padding: 12px 20px;
     background: #ff4444;
     color: white;
     border-radius: 10px;
@@ -93,6 +56,13 @@ strong {
 .btn:hover {
     background: #ff0000;
 }
+
+/* Responsive improvements */
+@media (max-width: 480px) {
+    h1 { font-size: 22px; }
+    p { font-size: 14px; }
+    .container { padding: 18px; }
+}
 </style>
 
 </head>
@@ -100,27 +70,27 @@ strong {
 <body>
 
 <div class="container">
-    <h1>⚠️ تم الإمساك بك!</h1>
+    <h1>⚠️ You’ve Been Caught!</h1>
 
     <p>
-        مسحت <strong>QR مجهول</strong> بدون ما تتأكد من المصدر.<br>
-        وهذا بالضبط اللي يستخدمه المهاجمون في هجمات <strong>QR Phishing</strong>.
+        You scanned an <strong>unknown QR code</strong> without verifying its source.<br>
+        This is exactly how attackers perform <strong>QR Phishing</strong>.
     </p>
 
     <p>
-        لو كان هذا الرابط خبيث؟  
-        كان ممكن يحدث:
-        <br>– فتح صفحة تصيد  
-        <br>– سرقة بيانات  
-        <br>– تثبيت ملف ضار  
+        If this link were malicious, it could:
+        <br>– Redirect you to a phishing page  
+        <br>– Steal your personal data  
+        <br>– Install malware  
         <br><br>
-        <strong>فكّر قبل ما تمسح أي QR.</strong>
+        <strong>Always think before you scan.</strong>
     </p>
 
-    <a class="btn" href="cyperproject2.html">تعلم أكثر عن أمن المعلومات</a>
+    <a class="btn" href="cyperproject2.html">Learn More About Cybersecurity</a>
 </div>
 
 </body>
 </html>
+
 
 
